--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -13,6 +13,11 @@ else
 {
     <form method="post">
         <div class="mt-3">
+            <label class="form-label">Id</label>
+            <input type="text" class="form-control" asp-for="Id" disabled/>
+        </div>
+
+        <div class="mt-3">
             <label class="form-label">Name</label>
             <input type="text" class="form-control" asp-for="Name" />
         </div>
@@ -29,6 +34,7 @@ else
 
         <div class="mt-3">
             <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-danger ms-3" asp-controller="Students" asp-action="Delete" asp-route-id="@Model.Id">Delete</button>
         </div>
     </form>
 }
