--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -4,7 +4,10 @@
 
 @model List<ChallengeProject.Models.Entities.Student>
 
-<h1>Students</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h1>Students</h1>
+    <a class="btn btn-success" asp-controller="Students" asp-action="Add">Add</a>
+</div>
 
 <table class="table">
     <thead>
